fix DT-2321, add word-wrap: break-word to fix Tweets with long URL's going into next column.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -280,6 +280,7 @@ p {
 .twitter .tweet-item {
     p {
         padding-bottom: 0;
+        word-wrap: break-word;
     }
     .tweet-wrap {
         max-width: 80%;
